--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Index.cshtml
@@ -95,7 +95,7 @@
                                             <div class="col-6">
                                                 <a asp-controller="Product"
                                                    asp-action="Detail"
-                                                   asp-route-id="@product.Id"
+                                                   asp-route-productId="@product.Id"
                                                    class="btn btn-dk-outline w-100 btn-sm"
                                                    title="مشاهده جزئیات">
                                                     جزئیات
