--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Product/Detail.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Product/Detail.cshtml
@@ -2,7 +2,7 @@
 @model ProductDto
 
 @{
-    ViewData["Title"] = Model?.Title ?? "جزئیات محصول";
+    ViewData["Title"] = Model.Title ;
 }
 
 <link href="~/css/product-detail.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-5 mb-4 mb-md-0">
                     <div class="product-gallery">
-                        <img src="~/images/ProductsAgg/@(string.IsNullOrEmpty(Model.Image) ? "default.png" : Model.Image)"
+                        <img src="~/images/ProductsAgg/@(string.IsNullOrEmpty(Model.Image) ? "default.jpg" : Model.Image)"
                              alt="@Model.Title"
                              class="img-fluid" />
                     </div>
@@ -87,7 +87,7 @@
                             }
 
                             <a asp-controller="Cart"
-                               asp-action="AddToCart"
+                               asp-action="Add"
                                asp-route-productId="@Model.Id"
                                class="btn-add-cart">
                                 <i class="bi bi-cart-plus-fill me-2"></i> افزودن به سبد خرید
