--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Product/Detail.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Product/Detail.cshtml
@@ -87,7 +87,7 @@
                             }
 
                             <a asp-controller="Cart"
-                               asp-action="Add"
+                               asp-action="AddToCart"
                                asp-route-productId="@Model.Id"
                                class="btn-add-cart">
                                 <i class="bi bi-cart-plus-fill me-2"></i> افزودن به سبد خرید
