--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Index.cshtml
@@ -93,29 +93,31 @@
                                     <div class="mt-3">
                                         <div class="row g-2">
                                             <div class="col-6">
-                                                <a asp-controller="Product"
-                                                   asp-action="Detail"
-                                                   asp-route-productId="@product.Id"
-                                                   class="btn btn-dk-outline w-100 btn-sm"
-                                                   title="مشاهده جزئیات">
-                                                    جزئیات
-                                                </a>
+                                                <a asp-controller="Product" asp-action="Detail" asp-route-productId="@product.Id"
+                                                   class="btn btn-dk-outline w-100 btn-sm">جزئیات</a>
                                             </div>
 
                                             <div class="col-6">
-                                                <a asp-controller="Cart"
-                                                   asp-action="AddToCart"
-                                                   asp-route-productId="@product.Id"
-                                                   class="btn btn-dk-primary w-100 btn-sm">
-                                                    <i class="bi bi-cart-plus"></i> خرید
-                                                </a>
+                                                @if (product.Inventory > 0) 
+                                                {
+                                                    <a asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.Id"
+                                                       class="btn btn-dk-primary w-100 btn-sm">
+                                                        <i class="bi bi-cart-plus"></i> خرید
+                                                    </a>
+                                                }
+                                                else
+                                                {
+                                                    <button class="btn btn-secondary w-100 btn-sm" disabled>
+                                                        ناموجود
+                                                    </button>
+                                                }
                                             </div>
-
                                         </div>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        
                     }
                 </div>
             }
