--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Shared/_Layout.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
 
                     <div class="auth-buttons ms-auto mt-2 mt-sm-0 d-flex align-items-center">
 
-                        <a href="#" class="btn-cart" title="سبد خرید">
+                        <a asp-action="Index" asp-controller ="Cart" class="btn-cart" title="سبد خرید">
                             <i class="bi bi-cart3"></i>
-                            <span class="cart-badge">0</span>
+                            
                         </a>
 
                         @if (LocalStorage.LoginUser != null)
