increase,decrease,addtocart,logout

--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Cart/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Cart/Index.cshtml
@@ -29,6 +29,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
+<div asp-validation-summary="ModelOnly" class="alert alert-danger text-center shadow-sm" role="alert"></div>
 <div class="container cart-container">
     <h4 class="fw-bold mb-4">سبد خرید شما</h4>
 
