Add tag a in header home

--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Error.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Home/Error.cshtml
@@ -76,8 +76,8 @@
                 }
 
                 <div class="mt-4">
-                    <a href="/" class="btn btn-primary btn-lg px-4">بازگشت به صفحه اصلی</a>
-                    <a href="/Admin/Account/Login" class="btn btn-outline-secondary btn-lg px-4 ms-2">صفحه ورود</a>
+                    <a asp-action="Index" asp-controller="Home" class="btn btn-primary btn-lg px-4">بازگشت به صفحه اصلی</a>
+                
                 </div>
             </div>
         </div>
