--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Shared/_Layout.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                         }
                         else
                         {
+                            <a class="btn-admin me-2" asp-area="Admin" asp-controller="Account" asp-action="Index">
+                                <i class="bi bi-shield-lock-fill"></i> پنل ادمین
+                            </a>
                             <a class="btn-login" asp-controller="Account" asp-action="Login">ورود</a>
                             <a class="btn-register" asp-controller="Account" asp-action="Register">ثبت نام</a>
                         }
