--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Category/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Category/Index.cshtml
@@ -36,7 +36,7 @@
                         <td>@item.Name</td>
                         <td>@item.Description</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm btn-action">ویرایش</a>
+                            <a asp-action="Edit" asp-route-categoryId="@item.Id" class="btn btn-warning btn-sm btn-action">ویرایش</a>
                             <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm btn-action">حذف</a>
                         </td>
                     </tr>
