--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Category/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Category/Index.cshtml
@@ -8,7 +8,21 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/category-index.css" />
 }
+@if (TempData["Success"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["Success"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["Error"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h3>لیست دسته‌بندی‌ها</h3>
     <a asp-action="Create" class="btn btn-success">
@@ -37,7 +51,14 @@
                         <td>@item.Description</td>
                         <td>
                             <a asp-action="Edit" asp-route-categoryId="@item.Id" class="btn btn-warning btn-sm btn-action">ویرایش</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm btn-action">حذف</a>
+                            <form asp-action="Delete" asp-route-categoryId="@item.Id" method="post" style="display:inline-block;">
+
+                                <button type="submit" class="btn btn-danger btn-sm btn-action"
+                                        onclick="return confirm('آیا از حذف این دسته‌بندی اطمینان دارید؟')">
+                                    حذف
+                                </button>
+
+                            </form>
                         </td>
                     </tr>
                 }
