Edit view OrderItem

--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Order/Index.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Order/Index.cshtml
@@ -53,7 +53,7 @@
                             <a asp-area="Admin"
                                asp-controller="Order"
                                asp-action="Detail"
-                               asp-route-orderId="@order.UserId"
+                               asp-route-orderId="@order.OrderId"
                                class="btn btn-sm btn-outline-primary">
                                 مشاهده
                             </a>
