--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                    class="btn btn-outline-light btn-sm">
                      مدیریت دسته بندی ها
                 </a>
+                <a asp-area="Admin"
+                   asp-controller="Dashboard"
+                   asp-action="Index"
+                   class="btn btn-outline-light btn-sm">
+                     داشبورد
+                </a>
 
                
                 <a asp-area="Admin"
