--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                      مدیریت دسته بندی ها
                 </a>
                 <a asp-area="Admin"
+                   asp-controller="Product"
+                   asp-action="Index"
+                   class="btn btn-outline-light btn-sm">
+                     مدیریت محصولات
+                </a>
+                <a asp-area="Admin"
                    asp-controller="Dashboard"
                    asp-action="Index"
                    class="btn btn-outline-light btn-sm">
