Add Authorize and authentication

--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                    class="btn btn-outline-light btn-sm">
                      مدیریت دسته بندی ها
                 </a>
+              
                 <a asp-area="Admin"
                    asp-controller="Product"
                    asp-action="Index"
@@ -57,11 +58,11 @@
                 </a>
 
                 
-                <a asp-area=""
-                   asp-controller="Home"
-                   asp-action="Index"
+                <a asp-area="Admin"
+                   asp-controller="Account"
+                   asp-action="Logout"
                    class="btn btn-light btn-sm">
-                    مشاهده سایت
+                   خروج
                 </a>
 
             </div>
